[package]
authors = ["Daohan Chong <wildcat.name@gmail.com>"]
edition = "2021"
name = "hello"
version = "0.1.0"

[lib]
crate-type = ["staticlib", "rlib"]
# staticlib would be good enough.
# adding "rlib" here just in case that we need to call these public interfaces directly from another Rust crate
name = "hello"


[dependencies]
once_cell = "1.18.0"
uniffi = { workspace = true }
# uniffi_bindgen = { workspace = true }
# uniffi_macros = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
